--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
   "private": false,
   "scripts": {
     "prebuild": "rimraf dist",
-    "build": "nest build",
+    "build:dev": "cross-env NODE_ENV=development nest build",
+    "build:prod": "cross-env NODE_ENV=production nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "cross-env NODE_ENV=development nest start",
     "start:dev": "cross-env NODE_ENV=development nest start --watch",
     "start:debug": "cross-env NODE_ENV=development nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "start:build": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
